# portifolio

./: .gitignore  pyproject.toml
apps/accounts/: admin.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: admin.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_footer.py
apps/core/templates/: base.html
apps/core/templates/main/: about.html  contact.html  footer.html  hero.html  index.html  message.html  sidebar.html  sitemap.xml  skills.html
apps/core/templates/registration/: password_change_done.html  password_reset_complete.html  password_reset_confirm.html
apps/main/: apps.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py  0002_footer.py
apps/main/templates/: base.html
apps/main/templates/main/: contact.html  footer.html  index.html  message.html  process.html  projects.html  robots.txt  sidebar.html  test.html
apps/main/templates/registration/: login.html  password_change.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
apps/main/templatetags/: custom_filters.py
core/: settings.py  urls.py
core/static/css/: tailwind.css
core/static/js/: script.js
core/utils/: regex.py
templates/: tf.html
templates/two_factor/: _base.html  _base_focus.html  _wizard_actions.html  _wizard_forms.html
templates/two_factor/core/: login.html  otp_required.html  setup.html  setup_complete.html
templates/two_factor/profile/: disable.html  profile.html
